--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <h2 class="alert alert-primary">sign in with google using javascript</h2>
+<!--     <h2 class="alert alert-primary">sign in with google using javascript</h2>
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <div class="data">
         <p>Name</p>
@@ -24,8 +24,17 @@
         <p>email</p>
         <p id="email"></p>
         <button type="button" class="btn btn-danger" onclick="signOut();">sign Out</button>
-    </div>
+    </div> -->
     <a href="#" onclick="signOut();">Sign out</a>
+    <script>
+          function onSignIn(googleUser) {
+          var profile = googleUser.getBasicProfile();
+          console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
+          console.log('Name: ' + profile.getName());
+          console.log('Image URL: ' + profile.getImageUrl());
+          console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
+        }
+    </script>
     <script>
       function signOut() {
         var auth2 = gapi.auth2.getAuthInstance();
@@ -34,12 +43,12 @@
         });
       }
     </script>
-    <script src="index.js"></script>
+<!--     <script src="index.js"></script> -->
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<!--     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
 </body>
 
 </html>
