--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-<!--     <h2 class="alert alert-primary">sign in with google using javascript</h2>
+    <h2 class="alert alert-primary">sign in with google using javascript</h2>
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <div class="data">
         <p>Name</p>
@@ -24,8 +24,8 @@
         <p>email</p>
         <p id="email"></p>
         <button type="button" class="btn btn-danger" onclick="signOut();">sign Out</button>
-    </div> -->
-    <a href="#" onclick="signOut();">Sign out</a>
+    </div>
+<!--     <a href="#" onclick="signOut();">Sign out</a> -->
     <script>
           function onSignIn(googleUser) {
           var profile = googleUser.getBasicProfile();
@@ -48,7 +48,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-<!--     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </body>
 
 </html>
