--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-signin-client_id"
-        content="680857755366-dq4lfrr00jj0q4h6dktigbauitaq8t34.apps.googleusercontent.com">
+        content="680857755366-ufptd86c53th884iobn2v70dc4509cf3.apps.googleusercontent.com">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
@@ -26,7 +26,7 @@
         <button type="button" class="btn btn-danger" onclick="signOut();">sign Out</button>
     </div>
 <!--     <a href="#" onclick="signOut();">Sign out</a> -->
-    <script>
+<!--     <script>
           function onSignIn(googleUser) {
           var profile = googleUser.getBasicProfile();
           console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
@@ -42,8 +42,8 @@
           console.log('User signed out.');
         });
       }
-    </script>
-<!--     <script src="index.js"></script> -->
+    </script> -->
+    <script src="index.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
