--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <button type="button" class="btn btn-danger" onclick="signOut();">sign Out</button>
     </div>
 <!--     <a href="#" onclick="signOut();">Sign out</a> -->
-<!--     <script>
+    <script>
           function onSignIn(googleUser) {
           var profile = googleUser.getBasicProfile();
           console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
@@ -42,7 +42,7 @@
           console.log('User signed out.');
         });
       }
-    </script> -->
+    </script>
     <script src="index.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
